--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ But it must have the following features:
   </head>
   <body>
     <div class="JAC">
-      <img  id="Pondati" src="../6.4 Motivation Meme Project/assets/images/luv.jpg" alt="LUV u Pondati">
+      <img  id="Pondati" src="./assets/images/luv.jpg" alt="LUV u Pondati">
       <h1>Avalum Naanum</h1>
       <p>Unakena Vazha uyir ovvoru nimishamum yenguthadi Thngm</p>
       <hr />
